add request/ response and small changes